<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margen"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.MenuFragment">



    <Button
        android:id="@+id/button_clasificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:fontFamily="@font/antic_slab"
        android:text="@string/clasificacion"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:fontFamily="@font/antic_slab"
        android:text="@string/genero"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_idioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:fontFamily="@font/antic_slab"
        android:text="@string/idioma"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_nacionalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:fontFamily="@font/antic_slab"
        android:text="@string/nacionalidad"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_pelicula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic_slab"
        android:text="@string/peliculas"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_alto"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/nameclass"
        android:textColor="@color/red"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margen_alto" />

</LinearLayout>